# enva

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-release.sh
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: execute-task.md  init-project.md  review-code.md
.claude/output-styles/: linus_style.md  teach.md
.github/workflows/: e2e.yml
src/: env.rs  env_run.rs  error.rs  lib.rs  main.rs  micromamba.rs  ownership.rs  package_manager.rs  prefix_registry.rs
src/backend/: cli.rs  factory.rs  mod.rs  rattler.rs  types.rs
src/configs/: xdxtools-core.yaml  xdxtools-extra.yaml  xdxtools-r.yaml  xdxtools-snakemake.yaml
